tests/specs/check/check_npm_install_diagnostics/main.out
TS2581 [ERROR]: Cannot find name '$'. Did you mean to import jQuery? Try adding `import $ from "npm:jquery";`.
$;
^
    at file:///[WILDCARD]/main.ts:1:1

error: Type checking failed.
